--- a/personaje.html
+++ b/personaje.html
@@ -12,12 +12,11 @@
     <div class="container">
         <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <img id="imagePage"src="" alt="">
+                    <img id="imagePage"src="" alt="" class="w-75">
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h5 id="namePage"></h5>
-                    <p id="speciesPage"></p>
-                    <p id="statusPage"></p>
+                    <p id="descriptionPage"></p>
                     <a href="./index.html" class="btn btn-warning">Volver</a>
                 </div>
         </div>
